# Hpc_sqp

./: README.md
faster/: CMakeLists.txt  bench.txt
faster/src/: traj_opt.cpp
presentation/: .gitignore  .~lock.Benchmark1.odt#  .~lock.wykresy.ods#
slower/: CMakeLists.txt  first_benchmark.txt
slower/src/: traj_opt.cpp
without_benchmark/: .gitignore  CMakeLists.txt
without_benchmark/src/: traj_opt.cpp
